# tradingqquant-sim

./: .gitignore  .replit  Dockerfile  LICENSE  README.md  azure-direct-deploy  index.js  main.py  package-lock.json  package.json  pyproject.toml  replit.md  tailwind.config.ts
.idx/: Tqs  dev.nix  dev.nix.test.nix
client/: requirements.md
cognitwin/: __init__.py
pull_request_reviews/: 11.md
quant-sim/: README.md  pyproject.toml
quant-sim/configs/: paper_ccxt.yaml  paper_ccxt_coinbase.yaml  paper_coinbase.yaml  pytorch.yaml
quant-sim/runs/2026-01-29_225126_runid-bdf9cd2b/: config_snapshot.yaml  logs.txt
quant-sim/runs/2026-01-29_232403_runid-f0b8dbac/: config_snapshot.yaml  logs.txt
quant-sim/runs/2026-01-29_232418_runid-055628f7/: equity_curve.csv  logs.txt  metrics.json
quant-sim/runs/2026-01-29_232445_runid-2e931ddf/: logs.txt
quant-sim/runs/2026-01-29_232653_runid-2ab40957/: logs.txt
quant-sim/src/quant_sim/: cli.py  config.py  init.py  run_artifacts.py
quant-sim/src/quant_sim/analytics/: metrics.py  report_csv.py  report_html.py
quant-sim/src/quant_sim/data/: features.py  provider.py  resample.py  validation.py
quant-sim/src/quant_sim/execution/: broker_base.py  ccxt_paper_broker.py  coinbase_broker.py  costs.py  guards.py  orders.py  sim_broker.py
quant-sim/src/quant_sim/portfolio/: portfolio.py  risk.py  sizing.py
quant-sim/src/quant_sim/strategies/: base.py  ensemble.py  meanrev.py  ml_pytorch.py  pairs.py  trend.py
quant-sim/src/quant_sim/utils/: logging.py
script/: setup_python.ts
server/: auth.ts  index.ts  routes.ts  (+1 more)
(+41 files in other folders)
