[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-sim"
version = "0.1.0"
description = "Quant Simulator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "requests>=2.31",
  "matplotlib>=3.8",
  "jinja2>=3.1",
  "torch>=2.2",
  "ccxt>=4.2",
]

[project.scripts]
quant-sim = "quant_sim.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
